# 3568_rknn_rtmp

./: README
mpp_encoder/: 1280x960.h264  CMakeLists.txt  MppEncoder.cpp  MppEncoder.h  MyEncoder.cpp  MyEncoder.h  encoder_api.cpp  main.cpp  test.cpp
rknn_yolov5/: CMakeLists.txt  build-linux_RK356X.sh
rknn_yolov5/include/: encoder_api.h  simple_rtmp_pusher.h  tcp_cmd.h
rknn_yolov5/libs/rknpu2/examples/rknn_yolov5_demo/src/: camera.cc
rknn_yolov5/src/: get_sample.cc  main.cc  main_back  tcp_cmd.cc  yolo.cc
rtmp_pusher/: CMakeLists.txt  out.flv  sample_800x600.h264  test10.h264  test7.h264
rtmp_pusher/include/: h264_to_rtmp.h  rtmp_streamer.h  simple_rtmp_pusher.h
rtmp_pusher/src/: h264_to_rtmp.cpp  main.cpp  rtc_streamer.cpp  rtmp_pusher.cpp  rtmp_streamer.cpp  simple_rtmp_pusher.cpp  simple_rtmp_pusher.xxcpp  simplest_ffmpeg_streamer.cpp
